# embeddedsw-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.cargo/: config.toml
embeddedsw-sys/: Cargo.toml  build.rs  wrapper.h  wrapper_base.h  wrapper_xaxidma.h  wrapper_xilffs.h
embeddedsw-sys/scripts/tcl/: base.tcl  libffs.tcl  platform.tcl  xilffs.tcl
embeddedsw-sys/src/: lib.rs
examples/: hello_world.rs
src/: ff.rs  lib.rs  xalloc.rs  xaxidma.rs  xil_printf.rs  xscugic.rs
