[package]
name = "embeddedsw-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
xaxidma = ["embeddedsw-sys/xaxidma"]
xilffs = ["embeddedsw-sys/xilffs"]

[dependencies]
embeddedsw-sys = { path = "./embeddedsw-sys" }

[build-dependencies]
xml-rs = "0.8"