[package]
name = "embeddedsw-sys"
version = "0.1.0"
edition = "2021"
authors = ["kazuki ikemori (kadu-v)"]
license = "0"
descritpion = """
Bindings to Xilinx's zynq driver for bearmetal applications.
"""
readme = "README.md"
documentation = "..."
repository = "https://github.com/nefrock/embeddedsw-rs"
kyewords = ["zynq", "embedded"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
defualt = []
xilffs = []
xaxidma = []
xscugic = []

[dependencies]
cty = "0.2.2"

[build-dependencies]
bindgen = "0.59.1"
dotenv = "*"
xml-rs = "0.8"

